[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_core"
path = "src/lib.rs"

[[bin]]
name = "vllm-core-server"
path = "src/main.rs"

[dependencies]
# Memory allocator
tikv-jemallocator = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hashing
sha2 = "0.10"

# Utilities
lazy_static = "1.4"

# gRPC and protobuf
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "signal"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Signal handling
signal-hook = "0.3"

# ZeroMQ for IPC
zmq = "0.10"

[build-dependencies]
tonic-build = "0.12"


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
